setup-scripts/OLD/60-etherpad/etherpad-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: etherpad-ingress
  namespace: etherpad
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production  
  labels:
    app: etherpad
spec:
  ingressClassName: nginx
  tls:
    - secretName: etherpad-ssl
      hosts:
      - etherpad.k8s.feri.ai          
  rules:
  - host: "etherpad.k8s.feri.ai"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: etherpad-service
              port:
                number: 80
